Fleshed out coffee-script compiling, see wiki/Using-node.js for details

--- a/views/about.jade
+++ b/views/about.jade
@@ -3,3 +3,7 @@ extends layout
 block content
 	p(align="center")
 		img(src="img/riff-designer-metro-logo.png")
+	p(style="width:612px; margin:0 auto")
+		em riff-designer
+		|  is an audio fabrication software that utilizes the technology of
+		| bezier curves to synthesize then manipulate your own sounds.
