--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,12 +24,14 @@ html.no-js(lang='en')
 
     block footer
       footer
-        script(src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
-        script
+        script(defer, src='js/lib/jquery-2.0.3.js')
+        script(defer, src='js/script.js')
+        //-script(src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
+        //-script
           window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\\/script>')
         //-script(defer, src='js/plugins.js')
-        script(defer, src='/js/script.js')
-        script(defer, src='/socket.io/socket.io.js')
+        //-script(defer, src='/js/script.js')
+        //-script(defer, src='/socket.io/socket.io.js')
           script
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
