--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,18 +98,35 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.ichTemplate {display:none;}
 
+.project-view {width:800px; float:left;}
+.project-view .header { width:100%; height: 300px;
+    background-color: #E0EFF1;}
+.project-view .container { width:100%;}
+.project-view .container .riff-module { width:100%; height:40px; 
+    background-color: #dbdbdb;}
+.project-view .container .riff-module .preview { width:40px; height:40px;
+    border-radius: 20px; background-color: #444; float:left;}
+.project-view .container .riff-module .preview:hover {cursor:pointer;}
+.project-view .container .riff-module .title {float:left;}
+.project-view .container .riff-module .edit { width:40px; height:40px;
+    border-radius: 20px; background-color: #666; float:right;}
+.project-view .container .riff-module .edit:hover {cursor:pointer;}
 
-
-
-
-
-
-
-
-
-
-
+.layer-view {width:800px; float:left;}
+.layer-view .header { height:60px;
+    background-color: #7DB4B5;}
+.layer-view .header .back {width:60px; height:60px; float:left;
+    border-radius: 30px; background-color: white}
+.layer-view .header .title { color:white;}
+.layer-view .container { width:100%;
+    background-color: #dbdbdb}
+.layer-view .container .layer-module { width:100%; height:80px;
+background-color: #f5f5f5}
+.layer-view .container .layer-module .preview {height:100%;padding-left:30px; float: left} 
+.layer-view .container .layer-module .edit {width:30px; height:100%; float:right;
+    border-radius: 15px;background-color: black;}
 
 
 
