--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,8 +24,9 @@ html.no-js(lang='en')
 
     block footer
       footer
-        script(defer, src='js/lib/jquery-2.0.3.js')
-        script(defer, src='js/script.js')
+        script(src='js/lib/jquery-2.0.3.min.js')
+        script(src='js/lib/ICanHaz.min.js')
+        script(src='js/script.js')
         //-script(src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
         //-script
           window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\\/script>')
