--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,19 +114,20 @@ textarea {
     border-radius: 20px; background-color: #666; float:right;}
 .project-view .container .riff-module .edit:hover {cursor:pointer;}
 
-.layer-view {width:800px; float:left;}
-.layer-view .header { height:60px;
+.riff-view {width:800px; float:left;}
+.riff-view .header { height:60px;
     background-color: #7DB4B5;}
-.layer-view .header .back {width:60px; height:60px; float:left;
+.riff-view .header .back {width:60px; height:60px; float:left;
     border-radius: 30px; background-color: white}
-.layer-view .header .title { color:white;}
-.layer-view .container { width:100%;
+.riff-view .header .title { color:white;}
+.riff-view .container { width:100%;
     background-color: #dbdbdb}
-.layer-view .container .layer-module { width:100%; height:80px;
+.riff-view .container .layer-module { width:100%; height:80px;
 background-color: #f5f5f5}
-.layer-view .container .layer-module .preview {height:100%;padding-left:30px; float: left} 
-.layer-view .container .layer-module .edit {width:30px; height:100%; float:right;
+.riff-view .container .layer-module .preview {height:100%;padding-left:30px; float: left} 
+.riff-view .container .layer-module .edit {width:30px; height:100%; float:right;
     border-radius: 15px;background-color: black;}
+.riff-view .container .layer-module .edit:hover {cursor:pointer;}
 
 
 
