--- a/static/css/style.css
+++ b/static/css/style.css
@@ -122,12 +122,12 @@ textarea {
 .riff-view .header .title { color:white;}
 .riff-view .container { width:100%;
     background-color: #dbdbdb}
-.riff-view .container .layer-module { width:100%; height:80px;
+.riff-view .container .riff-module { width:100%; height:80px;
 background-color: #f5f5f5}
-.riff-view .container .layer-module .preview {height:100%;padding-left:30px; float: left} 
-.riff-view .container .layer-module .edit {width:30px; height:100%; float:right;
+.riff-view .container .riff-module .preview {height:100%;padding-left:30px; float: left} 
+.riff-view .container .riff-module .edit {width:30px; height:100%; float:right;
     border-radius: 15px;background-color: black;}
-.riff-view .container .layer-module .edit:hover {cursor:pointer;}
+.riff-view .container .riff-module .edit:hover {cursor:pointer;}
 
 
 
