started implementing Paper.js, need separate scopes

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block content
 			.container
 				#RiffModule.ichTemplate
 					.riff-module(id="{{moduleName}}")
-						.title {{moduleName}}
+						//-.title {{moduleName}}
 						.preview
 							canvas
 						.edit(onclick="evt.editModule('{{moduleName}}');")
