--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,7 @@ html.no-js(lang='en')
 		meta(name="author", content=author)
 		meta(name="viewport", content='width=device-width, initial-scale=1')
 		link(rel='stylesheet', href='/css/style.css')
+		link(rel='stylesheet', href='/css/sheet.css')
 		//-script(src='js/libs/modernizr-2.0.6.min.js')
 	body
 		block header
