--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,23 +100,21 @@ textarea {
 
 .ichTemplate {display:none;}
 
+.button { width:32px; height: 32px; border: 4px solid rgba(32,32,32,0); background-repeat: none}
+.button:hover { cursor:pointer; border-color: rgba(32,32,32,1);}
+
 .project-view {width:800px; float:left;}
 .project-view .header { width:100%; height: 300px;
     background-color: #E0EFF1;}
 .project-view .toolbar {height:40px; background-color: #0088BD}
-.project-view .toolbar .new-riff {height:40px; width:40px; background: white}
-.project-view .toolbar .new-riff:hover {cursor:pointer;background: #f5faff}
 .project-view .container { width:100%;}
 .project-view .container .riff-view-open { width:100%; height:40px; 
     background-color: #dbdbdb;}
 
-.project-view .container .riff-view-open .preview { width:40px; height:40px;
-    border-radius: 20px; background-color: #444; float:left;}
+.project-view .container .riff-view-open .preview {float:left;}
 .project-view .container .riff-view-open .title {float:left;}
-.project-view .container .riff-view-open .edit { width:40px; height:40px;
-    border-radius: 20px; background-color: #666; float:right;}
+.project-view .container .riff-view-open .edit { float:right;}
 .project-view .container .riff-view-open.active .edit { background-color: #999 }
-.project-view .container .riff-view-open .edit:hover { cursor:pointer;}
 
 .riff-view {width:800px; float:left;}
 .riff-view .header { height:60px;
@@ -128,12 +126,10 @@ textarea {
     background-color: #dbdbdb}
 .riff-view .container .riff-module { width:100%; height:80px; position:relative;
 background-color: #f5f5f5}
-.riff-view .container .riff-module .title { padding-left: 30px; 
-    height:1em; margin-bottom: -1em}
-.riff-view .container .riff-module .preview {padding-left: 30px;height:100%; float:left;}
-.riff-view .container .riff-module .preview canvas {width:740px; height:80px;} 
-.riff-view .container .riff-module .edit {width:30px; height:100%; float:right;
-    border-radius: 15px;background-color: black;}
+.riff-view .container .riff-module .buttons {float: left; width:40px; height:100%;}
+.riff-view .container .riff-module .preview {height:100%; float:left;}
+.riff-view .container .riff-module .preview canvas {width:720px; height:80px;} 
+.riff-view .container .riff-module .edit {float:right;}
 .riff-view .container .riff-module .edit:hover {cursor:pointer;}
 .riff-view .container .riff-module.under-construction {height:300px;}
 .riff-view .container .riff-module.under-construction .preview canvas {height:300px;}
