--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,6 +99,7 @@ textarea {
    ========================================================================== */
 
 .ichTemplate {display:none;}
+.no-select {-webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;}
 
 .button { width:32px; height: 32px; border: 4px solid rgba(32,32,32,0); background-repeat: none}
 .button:hover { cursor:pointer; border-color: rgba(32,32,32,1);}
