Tool heirarchy file structure est.

--- a/views/index.jade
+++ b/views/index.jade
@@ -28,10 +28,9 @@ block content
 						.preview
 							canvas
 						.edit.buttons
-							.edit.button(onclick="evt.editModule('{{moduleName}}');")
+							.button(onclick="evt.editModule('{{moduleName}}');")
 								.inscribe_png
-							.edit.tools
-								
+							.tools
 
 
 block scripts
