Added individual riffview settings, and resizing riffmodules

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,12 +99,14 @@ textarea {
    ========================================================================== */
 
 .ichTemplate {display:none;}
-.no-select {-webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;}
+* {-webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;}
 
 .button { width:32px; height: 32px;
-    border: 4px solid rgba(32,32,32,0); background-repeat: none}
+    border: 4px solid rgba(32,32,32,0);}
 .button:hover { cursor:pointer;
     border-color: rgba(32,32,32,1);}
+
+.checkbox.checked {background-color: rgba(0,0,0,0.2)}
 
 .project-view {width:800px; float:left;}
 .project-view .header { width:100%; height: 300px;
@@ -113,28 +115,38 @@ textarea {
     background-color: #0088BD}
 .project-view .container { width:100%;}
 
-.riff-view-open { width:100%; height:40px; 
+.riff-view-open { width:100%; height:40px; overflow: hidden;
+    transition: height .4s; -webkit-transition: height .4s; /* Safari */
     background-color: #dbdbdb;}
+.riff-view-open.setting {height:80px;}
 .riff-view-open .preview {float:left;}
 .riff-view-open .title {float:left;}
+.riff-view-open .settings {float:right;}
 .riff-view-open .edit { float:right;}
 .riff-view-open.active .edit { background-color: #999 }
+
+.settings-view, .settings-view input {font-size: 24px}
+.settings-view input {height:32px;border:4px solid inherit;}
+.settings-view>div {float:left;}
+.settings-view span {margin-left:16px;}
 
 .riff-view {width:800px; float:left;}
 .riff-view .header { height:60px; 
     background-color: #7DB4B5;}
-.riff-view .header .back {width:60px; height:60px; float:left;
-    border-radius: 30px; background-color: white}
+.riff-view .header .back {float:left; margin:10px;
+    background-color: white}
 .riff-view .header .title { 
     color:white;}
 .riff-view .container { width:100%;
     background-color: #dbdbdb}
-.riff-module { width:100%; height:80px; position:relative;
+.riff-module { width:100%; height:80px; position:relative;overflow: hidden;
+    transition: height .4s; -webkit-transition: height .4s; /* Safari */
     background-color: #f5f5f5}
 .riff-module .buttons {float: left; width:40px; height:100%;}
 .riff-module .preview {height:100%; float:left;
     background-color:white;box-shadow: 0 0 10px rgba(0,0,0,.3)}
-.riff-module .preview canvas {width:720px; height:80px;} 
+.riff-module .preview canvas {width:720px; height:80px;
+    transition: height .4s; -webkit-transition: height .4s; /* Safari */} 
 .riff-module .buttons {float:right;}
 .riff-module .buttons .tools {display:none;}
 .riff-module.under-construction .buttons .tools {display:block;}
